--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -307,19 +307,17 @@
       <div class="footer-col">
         <h4>About Us</h4>
         <ul>
-          <li><a href="#">Our Services</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Our Team</a></li>
-          <li><a href="#">Careers</a></li>
+          <li><a href="/api/ourservices">Our Services</a></li>
+          <li><a href="/api/privacy-policy">Privacy Policy</a></li>
+          <li><a href="/api/team">Our Team</a></li>
+          <!-- <li><a href="#">Careers</a></li> -->
         </ul>
       </div>
       <div class="footer-col">
         <h4>Get Help</h4>
         <ul>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Help Center</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="/api/FAQ">FAQ</a></li>
+          <li><a href="/api/contactus">Contact Us</a></li>
         </ul>
       </div>
       <div class="footer-col">
