--- a/views/weather.ejs
+++ b/views/weather.ejs
@@ -13,7 +13,7 @@
       </div>
       <div class="menu">
         <ul>
-          <li><a href="/">Home</a></li>
+          <li><a href="/api/dashboard">Home</a></li>
           <li><a href="/api/bar">Bars</a></li>
           <li><a href="#events">Events</a></li>
           <li><a href="#contact">Contact</a></li>
